gen/com/cyberthinkers/tools/generate/GenScalaFacadesFromTypescriptParser.java
// Generated from C:/cyberthinkers-dev/typescript-to-scala-js-facade/src/main/java/com/cyberthinkers/tools/generate\GenScalaFacadesFromTypescript.g4 by ANTLR 4.7
package com.cyberthinkers.tools.generate;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GenScalaFacadesFromTypescriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LineTerminator=2, Abstract=3, As=4, Class=5, Const=6, Constructor=7, 
		Declare=8, Enum=9, Export=10, Extends=11, From=12, Function=13, Global=14, 
		Implements=15, Import=16, Interface=17, Keyof=18, Let=19, Module=20, Var=21, 
		In=22, Is=23, Public=24, Protected=25, Private=26, Static=27, Readonly=28, 
		New=29, Typeof=30, This=31, Type=32, Number=33, String=34, ThickArrow=35, 
		DotDotDot=36, OpenBracket=37, CloseBracket=38, OpenParen=39, CloseParen=40, 
		OpenBrace=41, CloseBrace=42, SemiColon=43, Comma=44, Assign=45, QuestionMark=46, 
		Colon=47, Dot=48, PlusPlus=49, MinusMinus=50, Plus=51, Minus=52, BitNot=53, 
		Not=54, Multiply=55, Divide=56, Modulus=57, LessThan=58, MoreThan=59, 
		LessThanEquals=60, GreaterThanEquals=61, Equals=62, NotEquals=63, IdentityEquals=64, 
		IdentityNotEquals=65, BitAnd=66, BitXOr=67, BitOr=68, And=69, Or=70, MultiplyAssign=71, 
		DivideAssign=72, ModulusAssign=73, PlusAssign=74, MinusAssign=75, LeftShiftArithmeticAssign=76, 
		RightShiftArithmeticAssign=77, RightShiftLogicalAssign=78, BitAndAssign=79, 
		BitXorAssign=80, BitOrAssign=81, BooleanLiteral=82, DecimalLiteral=83, 
		HexIntegerLiteral=84, OctalIntegerLiteral=85, Identifier=86, StringLiteral=87, 
		WS=88, Documentation=89, Comment=90, LineComment=91;
	public static final int
		RULE_typescriptAmbientDeclarations = 0, RULE_declarationScriptElement = 1, 
		RULE_exportDef = 2, RULE_importDef = 3, RULE_importName = 4, RULE_ambientModuleOrNamespace = 5, 
		RULE_ambientModuleName = 6, RULE_ambientItem = 7, RULE_ambientBracesItem = 8, 
		RULE_ambientStatement = 9, RULE_variableDeclaration = 10, RULE_variableList = 11, 
		RULE_variableName = 12, RULE_functionDeclaration = 13, RULE_classDeclaration = 14, 
		RULE_className = 15, RULE_ambientClassBodyElement = 16, RULE_ambientConstructorDeclaration = 17, 
		RULE_ambientPropertyMemberDeclaration = 18, RULE_optStatic = 19, RULE_exportIdentifier = 20, 
		RULE_numericLiteral = 21, RULE_typeDeclaration = 22, RULE_typeDef = 23, 
		RULE_typeParameters = 24, RULE_typeParameterList = 25, RULE_typeParameter = 26, 
		RULE_constraint = 27, RULE_typeArguments = 28, RULE_typeArgumentList = 29, 
		RULE_type = 30, RULE_unnamedInterface = 31, RULE_unionOrIntersectionOrPrimaryType = 32, 
		RULE_primaryOrArray = 33, RULE_nestedType = 34, RULE_arrayDim = 35, RULE_primaryType = 36, 
		RULE_typeGuard = 37, RULE_parenthesizedType = 38, RULE_typeReference = 39, 
		RULE_objectType = 40, RULE_typeBody = 41, RULE_typeMemberList = 42, RULE_typeMember = 43, 
		RULE_tupleType = 44, RULE_tupleTypeElements = 45, RULE_functionType = 46, 
		RULE_constructorType = 47, RULE_typeQuery = 48, RULE_thisType = 49, RULE_propertySignature = 50, 
		RULE_typeAnnotation = 51, RULE_callSignature = 52, RULE_parameterList = 53, 
		RULE_requiredParameterList = 54, RULE_requiredParameter = 55, RULE_accessibilityModifier = 56, 
		RULE_optionalParameterList = 57, RULE_optionalParameter = 58, RULE_restParameter = 59, 
		RULE_constructSignature = 60, RULE_indexSignature = 61, RULE_methodSignature = 62, 
		RULE_constExpression = 63, RULE_interfaceDeclaration = 64, RULE_interfaceName = 65, 
		RULE_extendsClause = 66, RULE_classOrInterfaceTypeList = 67, RULE_classHeritage = 68, 
		RULE_implementsClause = 69, RULE_enumDeclaration = 70, RULE_enumBody = 71, 
		RULE_enumMemberList = 72, RULE_enumMember = 73, RULE_enumValue = 74, RULE_identifierPath = 75, 
		RULE_optionalParam = 76, RULE_optionalBindingIdentifier = 77, RULE_bindingIdentifier = 78, 
		RULE_identifier = 79, RULE_lineEnd = 80;
	public static final String[] ruleNames = {
		"typescriptAmbientDeclarations", "declarationScriptElement", "exportDef", 
		"importDef", "importName", "ambientModuleOrNamespace", "ambientModuleName", 
		"ambientItem", "ambientBracesItem", "ambientStatement", "variableDeclaration", 
		"variableList", "variableName", "functionDeclaration", "classDeclaration", 
		"className", "ambientClassBodyElement", "ambientConstructorDeclaration", 
		"ambientPropertyMemberDeclaration", "optStatic", "exportIdentifier", "numericLiteral", 
		"typeDeclaration", "typeDef", "typeParameters", "typeParameterList", "typeParameter", 
		"constraint", "typeArguments", "typeArgumentList", "type", "unnamedInterface", 
		"unionOrIntersectionOrPrimaryType", "primaryOrArray", "nestedType", "arrayDim", 
		"primaryType", "typeGuard", "parenthesizedType", "typeReference", "objectType", 
		"typeBody", "typeMemberList", "typeMember", "tupleType", "tupleTypeElements", 
		"functionType", "constructorType", "typeQuery", "thisType", "propertySignature", 
		"typeAnnotation", "callSignature", "parameterList", "requiredParameterList", 
		"requiredParameter", "accessibilityModifier", "optionalParameterList", 
		"optionalParameter", "restParameter", "constructSignature", "indexSignature", 
		"methodSignature", "constExpression", "interfaceDeclaration", "interfaceName", 
		"extendsClause", "classOrInterfaceTypeList", "classHeritage", "implementsClause", 
		"enumDeclaration", "enumBody", "enumMemberList", "enumMember", "enumValue", 
		"identifierPath", "optionalParam", "optionalBindingIdentifier", "bindingIdentifier", 
		"identifier", "lineEnd"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", null, "'abstract'", "'as'", "'class'", "'const'", 
		"'constructor'", "'declare'", "'enum'", "'export'", "'extends'", "'from'", 
		"'function'", "'global'", "'implements'", "'import'", "'interface'", "'keyof'", 
		"'let'", "'module'", "'var'", "'in'", "'is'", "'public'", "'protected'", 
		"'private'", "'static'", "'readonly'", "'new'", "'typeof'", "'this'", 
		"'type'", "'number'", "'string'", "'=>'", "'...'", "'['", "']'", "'('", 
		"')'", "'{'", "'}'", "';'", "','", "'='", "'?'", "':'", "'.'", "'++'", 
		"'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<'", "'>'", 
		"'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", 
		"'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", 
		"'>>>='", "'&='", "'^='", "'|='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "LineTerminator", "Abstract", "As", "Class", "Const", "Constructor", 
		"Declare", "Enum", "Export", "Extends", "From", "Function", "Global", 
		"Implements", "Import", "Interface", "Keyof", "Let", "Module", "Var", 
		"In", "Is", "Public", "Protected", "Private", "Static", "Readonly", "New", 
		"Typeof", "This", "Type", "Number", "String", "ThickArrow", "DotDotDot", 
		"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon", 
		"Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
		"Divide", "Modulus", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", 
		"BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", 
		"Identifier", "StringLiteral", "WS", "Documentation", "Comment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GenScalaFacadesFromTypescript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GenScalaFacadesFromTypescriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypescriptAmbientDeclarationsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GenScalaFacadesFromTypescriptParser.EOF, 0); }
		public List<DeclarationScriptElementContext> declarationScriptElement() {
			return getRuleContexts(DeclarationScriptElementContext.class);
		}
		public DeclarationScriptElementContext declarationScriptElement(int i) {
			return getRuleContext(DeclarationScriptElementContext.class,i);
		}
		public TypescriptAmbientDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typescriptAmbientDeclarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitTypescriptAmbientDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypescriptAmbientDeclarationsContext typescriptAmbientDeclarations() throws RecognitionException {
		TypescriptAmbientDeclarationsContext _localctx = new TypescriptAmbientDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_typescriptAmbientDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Declare) | (1L << Export) | (1L << Import) | (1L << Interface))) != 0)) {
				{
				{
				setState(162);
				declarationScriptElement();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationScriptElementContext extends ParserRuleContext {
		public DeclarationScriptElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationScriptElement; }
	 
		public DeclarationScriptElementContext() { }
		public void copyFrom(DeclarationScriptElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclareInterfaceContext extends DeclarationScriptElementContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public DeclareInterfaceContext(DeclarationScriptElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitDeclareInterface(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareGlobalModuleOrNamespaceContext extends DeclarationScriptElementContext {
		public AmbientModuleOrNamespaceContext ambientModuleOrNamespace() {
			return getRuleContext(AmbientModuleOrNamespaceContext.class,0);
		}
		public DeclareGlobalModuleOrNamespaceContext(DeclarationScriptElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitDeclareGlobalModuleOrNamespace(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareExportContext extends DeclarationScriptElementContext {
		public ExportDefContext exportDef() {
			return getRuleContext(ExportDefContext.class,0);
		}
		public DeclareExportContext(DeclarationScriptElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitDeclareExport(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareModuleOrNamespaceContext extends DeclarationScriptElementContext {
		public AmbientModuleOrNamespaceContext ambientModuleOrNamespace() {
			return getRuleContext(AmbientModuleOrNamespaceContext.class,0);
		}
		public AmbientStatementContext ambientStatement() {
			return getRuleContext(AmbientStatementContext.class,0);
		}
		public LineEndContext lineEnd() {
			return getRuleContext(LineEndContext.class,0);
		}
		public DeclareModuleOrNamespaceContext(DeclarationScriptElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitDeclareModuleOrNamespace(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareImportContext extends DeclarationScriptElementContext {
		public ImportDefContext importDef() {
			return getRuleContext(ImportDefContext.class,0);
		}
		public DeclareImportContext(DeclarationScriptElementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GenScalaFacadesFromTypescriptVisitor ) return ((GenScalaFacadesFromTypescriptVisitor<? extends T>)visitor).visitDeclareImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationScriptElementContext declarationScriptElement() throws RecognitionException {
		DeclarationScriptElementContext _localctx = new DeclarationScriptElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarationScriptElement);
		try {
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new DeclareModuleOrNamespaceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(Declare);
				setState(175);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(171);
					ambientModuleOrNamespace();
					}
					break;
				case 2:
					{
					{
					setState(172);
					ambientStatement();
					setState(173);
					lineEnd();
					}
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new DeclareGlobalModuleOrNamespaceContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				match(Declare);
				setState(178);
				match(Global);
				setState(179);
				match(OpenBrace);
				setState(180);
				ambientModuleOrNamespace();
				setState(181);
				match(CloseBrace);
				}
				break;
			case 3:
				_localctx = new DeclareInterfaceContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(183);
				interfaceDeclaration();
				}
				break;
			case 4:
				_localctx = new DeclareExportContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(184);
				exportDef();
				}
				break;
			case 5:
				_localctx = new DeclareImportContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(185);
				importDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
